# mdf

./: .gitattributes  .gitignore  .gitmodules  Cargo.toml  README.md  lcov.info  rustfmt.toml
errful/: Cargo.toml  README.md
errful/examples/: basic.rs  readme.rs
errful/src/: colors.rs  error_source.rs  lib.rs  main.rs  protocol.rs  result.rs  severity.rs  snippets.rs  termination.rs
errful/src/formatting/: mod.rs  pretty.rs  pretty_nocolor.rs
errful/tests/: errful_impl.rs  line_wrapping.rs  tests.rs
gedcom/: Cargo.toml
gedcom/src/: encodings.rs  lib.rs  versions.rs
gedcom/src/parser/: decoding.rs  lines.rs  mod.rs  options.rs  records.rs  versions.rs
gedcom/src/v5/: mod.rs
gedcom/src/v7/: mod.rs
gedcom/tests/: tests.rs
gedcom/tests/encoding_inputs/: ansel_specified.ged  ansel_specified_malformed_atend.ged  ansel_specified_malformed_badchar.ged  ansel_specified_malformed_stacked.ged  ascii_specified.ged  ascii_specified_malformed.ged  utf16be_bom.ged  utf16be_nobom.ged  utf16le_bom.ged  utf16le_nobom.ged  utf16le_specified_incorrect.ged  utf8_bom.ged  utf8_bom_malformed.ged  utf8_specified.ged  utf8_specified_malformed.ged  v7_encoding_mismatch.ged
gedcom/tests/format_inputs/: after_trlr.ged  no_head.ged  no_trlr.ged  no_vers.ged
gedcom/tests/snapshots/: tests__encodings@ansel_specified.ged-2.snap  tests__encodings@ansel_specified.ged-2.snap.new  tests__encodings@ansel_specified.ged.snap  tests__encodings@ansel_specified.ged.snap.new  tests__encodings@ansel_specified_malformed_atend.ged-2.snap  tests__encodings@ansel_specified_malformed_atend.ged-2.snap.new  tests__encodings@ansel_specified_malformed_atend.ged.snap  tests__encodings@ansel_specified_malformed_atend.ged.snap.new  tests__encodings@ansel_specified_malformed_badchar.ged-2.snap  tests__encodings@ansel_specified_malformed_badchar.ged-2.snap.new  tests__encodings@ansel_specified_malformed_badchar.ged.snap  tests__encodings@ansel_specified_malformed_badchar.ged.snap.new  tests__encodings@ansel_specified_malformed_stacked.ged-2.snap  tests__encodings@ansel_specified_malformed_stacked.ged-2.snap.new  tests__encodings@ansel_specified_malformed_stacked.ged.snap  tests__encodings@ansel_specified_malformed_stacked.ged.snap.new  tests__encodings@ascii_specified.ged-2.snap  tests__encodings@ascii_specified.ged-2.snap.new  tests__encodings@ascii_specified.ged.snap  tests__encodings@ascii_specified.ged.snap.new  tests__encodings@ascii_specified_malformed.ged-2.snap  tests__encodings@ascii_specified_malformed.ged-2.snap.new  tests__encodings@ascii_specified_malformed.ged.snap  tests__encodings@ascii_specified_malformed.ged.snap.new  tests__encodings@not_ged.ged-2.snap  tests__encodings@not_ged.ged.snap  tests__encodings@unknown.ged-2.snap  tests__encodings@unknown.ged-2.snap.new  tests__encodings@unknown.ged.snap  tests__encodings@unknown.ged.snap.new  tests__encodings@utf16be_bom.ged-2.snap  tests__encodings@utf16be_bom.ged-2.snap.new  tests__encodings@utf16be_bom.ged.snap  tests__encodings@utf16be_bom.ged.snap.new  tests__encodings@utf16be_nobom.ged-2.snap  tests__encodings@utf16be_nobom.ged-2.snap.new  tests__encodings@utf16be_nobom.ged.snap  tests__encodings@utf16be_nobom.ged.snap.new  tests__encodings@utf16le_bom.ged-2.snap  tests__encodings@utf16le_bom.ged-2.snap.new  (+59 more)
gedcom/tests/syntax_inputs/: basic_grandparent.ged  basic_line.ged  basic_nested.ged  basic_nested_2.ged  basic_nested_2_siblings.ged  basic_siblings.ged  incorrect_level.ged  skipped_level.ged  void_xref.ged  xref_no_tag.ged
gedcomesque/: Cargo.toml
gedcomesque/examples/: gogogo.rs
gedcomesque/src/: lib.rs
gedcomesque/src/entities/: individual.rs
gedcomfy/: Cargo.toml  README.md
gedcomfy/docs/: comparison.md
gedcomfy/docs/comparisons/: large_files.md
gedcomfy/src/: encodings.rs  highlighting.rs  lib.rs  ntypes.rs  reader.rs  versions.rs
gedcomfy/src/parser/: decoding.rs  lines.rs  mod.rs  options.rs  records.rs  versions.rs
gedcomfy/src/reader/: decoding.rs  input.rs  lines.rs  options.rs  records.rs  versions.rs
gedcomfy/src/schemas/: conversions.rs  macros.rs  mod.rs
gedcomfy/src/v5/: mod.rs
gedcomfy/src/v551/: mod.rs
gedcomfy/src/v7/: mod.rs
gedcomfy/tests/: gedcom_555.rs  shared.rs  syntax.rs  tests.rs
gedcomfy/tests/encoding_inputs/: ansel_specified.ged  ansel_specified_malformed_atend.ged  ansel_specified_malformed_badchar.ged  ansel_specified_malformed_stacked.ged  ascii_specified.ged  ascii_specified_malformed.ged  unknown.ged  utf16be_nobom.ged  utf16le_bom.ged  utf8_assumedversion_malformed.ged  utf8_bom.ged  utf8_specified.ged  utf8_specified_malformed.ged
gedcomfy/tests/format_inputs/: no_gedc.ged  no_trlr.ged  no_vers.ged
gedcomfy/tests/snapshots/: tests__assess_ged.snap  tests__can_parse_allged_fully.snap  tests__encodings@ansel_specified.ged-2.snap  tests__encodings@ansel_specified_malformed_badchar.ged-2.snap  tests__encodings@ansel_specified_malformed_badchar.ged.snap  tests__encodings@ansel_specified_malformed_stacked.ged.snap  tests__encodings@ascii_specified_malformed.ged-2.snap  tests__encodings@ascii_specified_malformed.ged-2.snap.new  tests__encodings@ascii_specified_malformed.ged.snap  tests__encodings@unknown.ged.snap  tests__encodings@utf16be_bom.ged-2.snap  tests__encodings@utf16be_nobom.ged.snap  tests__encodings@utf16le_bom.ged-2.snap  tests__encodings@utf16le_bom.ged.snap  tests__encodings@utf16le_specified_incorrect.ged-2.snap  tests__encodings@utf16le_specified_incorrect.ged.snap  tests__encodings@utf8_assumedversion.ged-2.snap  tests__encodings@utf8_assumedversion.ged.snap  tests__encodings@utf8_bom.ged.snap  tests__encodings@utf8_bom_malformed.ged.snap  tests__encodings@utf8_specified.ged.snap  tests__encodings@utf8_specified_malformed.ged.snap  tests__encodings@v7_encoding_mismatch.ged-2.snap  tests__external_encoding@not_ged.ged.snap  (+66 more)
gedcomx/: Cargo.toml
gedcomx/src/: lib.rs
mdf/: Cargo.toml
mdf/src/: cliclack_layer.rs  components.rs  main.rs
snippets/: Cargo.toml
snippets/src/: label.rs  lib.rs  linelighter.rs  renderer.rs
snippets/tests/: other_libs.rs
(+53 files in other folders)
