[workspace]
members = ["gedcomfy", "gedcomesque", "mdf", "errful", "errful-derive", "complex-indifference"]
resolver = "2"

[workspace.package]
authors = ["George Pollard <porges@porg.es>"]
license = "GPL-3.0"
edition = "2021"

[profile.release]
strip = true
lto = "thin"

[profile.dev.package]
insta.opt-level = 3
