[package]
name = "errful"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
thiserror = "1.0.63"
complex-indifference = { path = "../complex-indifference", features = ["unicode-width"] }
errful-derive = { path = "../errful-derive" }
owo-colors = { version = "4.0.0", features = ["alloc"] }
mappable-rc = "0.1.1"
yoke = "0.7.4"
unicode-width = "0.1.13"
textwrap = { version = "0.16.1", features = ["terminal_size"] }

[dev-dependencies]
insta = "1.39.0"
ansi-to-html = "0.2.1"
