[package]
name = "errful"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
complex-indifference = { path = "../complex-indifference", features = ["unicode-width"] }
derive_more = { version = "1.0.0", features = ["from", "display", "error"] }
errful-derive = { path = "../errful-derive" }
impls = "1.0.3"
mappable-rc = "0.1.1"
owo-colors = { version = "4.0.0" }
ref-cast = "1.0.23"
snippets = { path = "../snippets" }
textwrap = { version = "0.16.1", features = ["terminal_size"] }
unicode-width = "0.2.0"
url = "2.5.2"
url-macro = "0.2"
yoke = "0.7.4"

[dev-dependencies]
ansi-to-html = "0.2.1"
insta = "1.39.0"
