[package]
name = "gedcomesque"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sea-orm = { version = "1.0.0", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio",
] }

[dev-dependencies]
miette = { git = "https://github.com/Porges/miette", features = [
    "fancy-no-backtrace",
], branch = "inherit-source-to-causes" }
tokio = { version = "1.39.2", features = ["rt", "macros"] }
gedcomfy = { path = "../gedcomfy" }
