[package]
name = "gedcomesque"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sea-orm = { version = "1.0.0", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio",
] }

[dev-dependencies]
miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
tokio = { version = "1.39.2", features = ["rt", "macros"] }
gedcomfy = { path = "../gedcomfy" }
