[package]
name = "gedcomesque"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
sea-orm = { version = "1.0.0", features = [
    "sqlx-sqlite",
    "macros",
    "runtime-tokio",
] }

[dev-dependencies]
errful = { path = "../errful" }
tokio = { version = "1.39.2", features = ["rt", "macros"] }
gedcomfy = { path = "../gedcomfy" }
derive_more = { version = "2.0.1", features = ["display", "from"] }
