[package]
name = "gedcomfy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["miette-highlighting", "kdl"]
miette-highlighting = ["miette/fancy-no-backtrace"]
legacy-encodings = ["dep:oem_cp"]
kdl = ["dep:kdl"]

[dependencies]
ascii = "1.1.0"
complex-indifference = { path = "../complex-indifference" }
derive_more = { version = "1.0.0", features = ["from", "display", "error"] }
errful = { path = "../errful" }
encoding_rs = "0.8.34"
kdl = { version = "4.6.0", optional = true }
miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
oem_cp = { version = "2.0.0", optional = true }
owo-colors = { version = "4.0.0", features = ["supports-colors"] }
paste = "1.0.15"
tracing = { version = "0.1", features = ["attributes"] }
vec1 = "1.12.1"
yoke = { version = "0.7.4", features = ["derive"] }
itertools = "0.14.0"


[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"] }
