[package]
name = "gedcomfy"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[features]
default = ["miette-highlighting", "kdl", "turtle"]
kdl = ["dep:kdl"]
legacy-encodings = ["dep:oem_cp"]
miette-highlighting = ["miette/fancy-no-backtrace"]
turtle = ["dep:sophia_api", "dep:sophia_turtle"]

[dependencies]
ascii = "1.1.0"
complex-indifference = { path = "../complex-indifference" }
derive_more = { version = "2.0.1", features = ["from", "display"] }
dunce = "1.0.5"
encoding_rs = "0.8.35"
errful = { path = "../errful" }
itertools = "0.14.0"
kdl = { version = "4.6.0", optional = true }
memmap2 = "0.9.5"
miette = { version = "7.6.0", features = ["fancy-no-backtrace"] }
oem_cp = { version = "2.0.0", optional = true }
owo-colors = { version = "4.2.1", features = ["supports-colors"] }
paste = "1.0.15"
rstest = { version = "0.25.0", default-features = false }
sophia_api = { version = "0.9.0", optional = true }
sophia_turtle = { version = "0.9.0", optional = true }
thiserror = "2.0.12"
tracing = { version = "0.1", features = ["attributes"] }
vec1 = "1.12.1"
yoke = { version = "0.8.0", features = ["derive"] }


[dev-dependencies]
indoc = "2.0.6"
insta = { version = "1.43.1", features = ["glob"] }
