[package]
name = "gedcomx"
version = "0.1.0"
edition = "2021"
authors = ["George Pollard <porges@porg.es>"]
license = "GPL-3.0"

[dependencies]
http = "1.1.0"
http-serde = "2.1.1"
icu_calendar = "1.5.2"
iso8601-duration = "0.2.0"
miette = "7.2.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
insta = { version = "1.39.0", features = ["glob"] }
miette = { version = "7.2.0", features = ["fancy-no-backtrace"] }
