[package]
name = "mdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
gedcomfy = { path = "../gedcomfy" }
miette = { git = "https://github.com/Porges/miette", features = ["fancy-no-backtrace"], branch="inherit-source-to-causes" }
tracing-subscriber = "0.3.18"
tracing = "0.1"
fancy-duration = "0.9.2"
