[package]
name = "mdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
clap = { version = "4.5.13", features = ["derive"] }
gedcomfy = { path = "../gedcomfy" }
miette = { version = "7.4.0", features = ["fancy-no-backtrace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1"
fancy-duration = "0.9.2"
