[package]
name = "mdf"
version = "0.1.0"
edition.workspace = true
license.workspace = true
authors.workspace = true

[dependencies]
gedcomfy = { path = "../gedcomfy" }

clap = { version = "4.5.13", features = ["derive"] }
fancy-duration = "0.9.2"
iocraft = "0.5.0"
miette = { version = "7.6.0", features = ["fancy-no-backtrace"] }
tracing-subscriber = "0.3.18"
tracing = "0.1"
