[package]
name = "snippets"
version = "0.1.0"
authors.workspace = true
license.workspace = true
edition.workspace = true

[dependencies]
complex-indifference = { path = "../complex-indifference", features = ["unicode-width"] }
owo-colors = { version = "4.0.0" }
unicode-width = "0.2.0"
textwrap = "0.16.1"
vec1 = "1.12.1"

[dev-dependencies]
bolero = "0.12.0"
insta = "1.39.0"

[[test]]
name = "render_test"
harness = false
